[package]
name = "glutyl"
version = "0.1.0"
edition = "2024"

[lib]

[features]
default = []
file = ["dep:serde", "dep:toml", "dep:serde_json", "dep:json5"]

[dependencies]
thiserror = "2.0.16"
log = "0.4.29"
serde = { version = "1.0.228", optional = true }
toml = { version = "0.9.10", optional = true }
serde_json = {version = "1.0", optional = true}
json5 = { version = "1.3", optional = true }
